@startuml
hide methods
left to right direction
skinparam classAttributeIconSize 0

class Company {
  - designation
}

class VaccinationCenter {
  - name
  - address
  - email
  - phoneNumber
  - faxNumber
  - website
}

class SNSUser {
  - name
  - address
  - sex
  - phoneNumber
  - email
  - birthDate
  - snsUserNumber
  - citizenCardNumber
}

class Appointment {
  - date
  - time
  - state
}

class Vaccine {
  - name
  - brand
  - id
}

class VaccineAdministration {
  - administeredDate
  - leaveDate
  - lotNumber
  - adverseReactions
}

class Nurse {
  - name
  - address
  - phoneNumber
  - email
  - citizenCardNumber
  - employeeId
}

Company "1" -- "*" VaccinationCenter : manages >
VaccinationCenter "1" -- "*" VaccineAdministration : performs >
Nurse "1" -- "*" VaccineAdministration : registers >
SNSUser "1" -- "1" VaccineAdministration : receives >
Appointment "1" -- "1" VaccineAdministration : fulfills >
Vaccine "1" -- "*" VaccineAdministration : administered as >

@enduml